# slrk

./: CMakeLists.txt  README.md  dir_49e56c817e5e54854c35e136979f97ca.html  graph_legend.html  index.html
.github/workflows/: pkgrel.yml
docs/: CMakeLists.txt  mainpage.md
include/slrk/: embedded_config.h
search/: all_0.js  pages_0.js
src/: CMakeLists.txt  syslog.c
tests/: CMakeLists.txt  check_syslog.c
